testing/macro-tests/tests/ui/default_remove_without_inheritance.stderr
error: cannot remove trait 'Default' because it is not enabled
 --> tests/ui/default_remove_without_inheritance.rs:3:1
  |
3 | #[record(traits(remove(Default)))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `record` (in Nightly builds, run with -Z macro-backtrace for more info)
