testing/macro-tests/tests/ui/default_remove_without_inheritance.rs
use icydb::design::prelude::*;

#[record(traits(remove(Default)))]
pub struct InvalidDefaultRemoval;

fn main() {}
